modified:   .gitmodules new file:   AndFish new file:   AndroFish new file:   BatteryLevel new file:   BomberMan-for-Android new file:   CoreGame new file:   FishRingsForAndroid new file:   ShootEmOff new file:   VelbazhdSoftwareLLC/FishRingsForAndroid new file:   VelbazhdSoftwareLLC/Politrics new file:   VelbazhdSoftwareLLC/RussianTripleForAndroid new file:   VelbazhdSoftwareLLC/tuty-fruty-slot-for-android new file:   android-vitosha-poker-odds/VelbazhdSoftwareLLC new file:   android-vitosha-poker-odds/six999 new file:   com.mobilepearls/memory new file:   com.mobilepearls/react new file:   com.mobilepearls/sokoban modified:   du.sha modified:   du.sha256 modified:   du.sha512 modified:   du.tar.gz new file:   dudo new file:   gamemasterdice new file:   rorist/Cowsay-android new file:   rorist/android-alarm-button new file:   rorist/android-reverse new file:   thugaim

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,9 @@
 [submodule "dudo"]
 	path = dudo
 	url = https://github.com/jareens/dudo
+[submodule "CoreGame"]
+	path = CoreGame
+	url = https://github.com/ktom2135/CoreGame
+[submodule "ShootEmOff"]
+	path = ShootEmOff
+	url = https://github.com/krixisLv/ShootEmOff
